@@ -1,6 +1,7 @@
 * 2013-04-25 - thorben.betten@open-xchange.com
 
  - Fix for bug 26116: Invalidate cache entry on document change/deletion
+ - Fix for bug 26120: Adapted logging behavior to client actions
 
 * 2013-04-23 - tobias.friedrich@open-xchange.com
 
